test/classes/delete-free/multiple-modifiers.good
multiple-modifiers.chpl:5: error: Type expression uses multiple class kinds: borrowed borrowed
multiple-modifiers.chpl:6: error: Type expression uses multiple class kinds: borrowed owned
multiple-modifiers.chpl:7: error: Type expression uses multiple class kinds: borrowed unmanaged
multiple-modifiers.chpl:8: error: Type expression uses multiple class kinds: borrowed shared
multiple-modifiers.chpl:9: error: Type expression uses multiple class kinds: owned borrowed
multiple-modifiers.chpl:10: error: Type expression uses multiple class kinds: owned owned
multiple-modifiers.chpl:11: error: Type expression uses multiple class kinds: owned unmanaged
multiple-modifiers.chpl:12: error: Type expression uses multiple class kinds: owned shared
multiple-modifiers.chpl:13: error: Type expression uses multiple class kinds: unmanaged borrowed
multiple-modifiers.chpl:14: error: Type expression uses multiple class kinds: unmanaged owned
multiple-modifiers.chpl:15: error: Type expression uses multiple class kinds: unmanaged unmanaged
multiple-modifiers.chpl:16: error: Type expression uses multiple class kinds: unmanaged shared
multiple-modifiers.chpl:17: error: Type expression uses multiple class kinds: shared borrowed
multiple-modifiers.chpl:18: error: Type expression uses multiple class kinds: shared owned
multiple-modifiers.chpl:19: error: Type expression uses multiple class kinds: shared unmanaged
multiple-modifiers.chpl:20: error: Type expression uses multiple class kinds: shared shared
multiple-modifiers.chpl:21: error: Type expression uses multiple class kinds: borrowed owned
multiple-modifiers.chpl:23: error: Type expression uses multiple class kinds: unmanaged shared
multiple-modifiers.chpl:22: error: Type expression uses multiple class kinds: owned unmanaged
multiple-modifiers.chpl:24: error: Type expression uses multiple class kinds: borrowed borrowed
multiple-modifiers.chpl:25: error: Type expression uses multiple class kinds: borrowed owned
multiple-modifiers.chpl:26: error: Type expression uses multiple class kinds: borrowed unmanaged
multiple-modifiers.chpl:27: error: Type expression uses multiple class kinds: borrowed shared
multiple-modifiers.chpl:28: error: Type expression uses multiple class kinds: owned borrowed
multiple-modifiers.chpl:29: error: Type expression uses multiple class kinds: owned owned
multiple-modifiers.chpl:30: error: Type expression uses multiple class kinds: owned unmanaged
multiple-modifiers.chpl:31: error: Type expression uses multiple class kinds: owned shared
multiple-modifiers.chpl:32: error: Type expression uses multiple class kinds: unmanaged borrowed
multiple-modifiers.chpl:33: error: Type expression uses multiple class kinds: unmanaged owned
multiple-modifiers.chpl:34: error: Type expression uses multiple class kinds: unmanaged unmanaged
multiple-modifiers.chpl:35: error: Type expression uses multiple class kinds: unmanaged shared
multiple-modifiers.chpl:36: error: Type expression uses multiple class kinds: shared borrowed
multiple-modifiers.chpl:37: error: Type expression uses multiple class kinds: shared owned
multiple-modifiers.chpl:38: error: Type expression uses multiple class kinds: shared unmanaged
multiple-modifiers.chpl:39: error: Type expression uses multiple class kinds: shared shared
multiple-modifiers.chpl:42: error: Type expression uses multiple class kinds: unmanaged shared
multiple-modifiers.chpl:41: error: Type expression uses multiple class kinds: owned unmanaged
multiple-modifiers.chpl:40: error: Type expression uses multiple class kinds: borrowed owned
